09_Kibana_Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-logging-ingress
  annotations:
    alb.ingress.kubernetes.io/description: 'kibana-logging'
    # alb.ingress.kubernetes.io/load-balancer-name: 'kibana-logging-alb'
  labels:
    app: kibana-logging-ingress
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana-logging
            port:
              number: 5601
