sample-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-logging-app
spec:
  selector:
    matchLabels:
      app: logging-app
      version: v1
      color: blue
  replicas: 1
  template:
    metadata:
      labels:
        app: logging-app
        version: v1
        color: blue
    spec:
      containers:
      - name: logging-app-container
        image: ashokit/sb-logger-app
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: logging-app
  labels:
    app: logging-app
spec:
  type: NodePort
  selector:
    app: logging-app
  ports:
  - protocol: TCP
    port: 7070
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logging-app-ingress
  annotations:
    alb.ingress.kubernetes.io/description: 'logging-app'
    alb.ingress.kubernetes.io/load-balancer-name: 'logging-app-alb'
  labels:
    app: logging-app-ingress
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: logging-app
            port:
              number: 7070
